--- a/README
+++ b/README
@@ -3,6 +3,14 @@
 Gecode/R is a Ruby interface to Gecode, an open, free and efficient environment 
 for developing constraint-based systems and applications.
 
+== Warning
+
+Gecode/R is still in an early development stage, the syntax is by no means 
+final and backwards compatibility will be broken time and time again until 
+later in the development process. Don’t use Gecode/R in production-code yet, 
+it’s merely available this early to allow people to play with it and give 
+feedback.
+
 == Installation
 
 Gecode/R requires Gecode 1.3.1, which can be downloaded from 
