Added boolean variables. They are created using Model#bool_var and Model#bool_var_array . Refactored the variables a bit in the process. Added some missing bool-var-related things to the raw bindings.

--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,7 @@
 * Added Model#reset! which resets a model after search.
 * Added Model#solution which passes the first solution to a block and returns the result of that block.
 * Added Model#each_soltion which iterates over each solution.
+* Added boolean variables. They are created using Model#bool_var and Model#bool_var_array .
 
 == Version 0.2.0
 
