--- a/CHANGES
+++ b/CHANGES
@@ -1,9 +1,13 @@
+== Version 0.3.1 (in SVN)
+
+* [#11861] Fixed a bug stopping the creating of int variables with non-range domains.
+
 == Version 0.3.0
 
 * The constructor of Gecode::Model no longer has to be called by classes inheriting from it.
 * Added Model#reset! which resets a model after search.
 * Added Model#solution which passes the first solution to a block and returns the result of that block.
-* Added Model#each_soltion which iterates over each solution.
+* Added Model#each_solution which iterates over each solution.
 * Added boolean variables. They are created using Model#bool_var and Model#bool_var_array .
 * Added two options to constraints: propagation strength and reification variable.
 * Linear and simple relation constraints can now also be specified using #equal, #equal_to, #greater, #greater_than,... in addition to comparison operators.
