--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,6 @@
 == Version 0.4.1 (in SVN)
 
-* Added exclusive or.
+* Added exclusive or and implication.
 
 == Version 0.4.0
 This release adds most of the constraints supported by Gecode for integer
