Fixed bug with cardinality constraints using composite sugar.

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+== Version 0.6.1 (in SVN)
+
+* Fixed bug with cardinality constraints using composite sugar.
+
 == Version 0.6.0
 This release adds most of the remaining set constraints. It also makes 
 backward-compatibility breaking changes to the way that properties of variables
