--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,9 @@
-== Version 0.6.1 (in SVN)
+== Version 0.6.1
+This release fixes various bugs introduced in 0.6.0 and changes the way that
+int variable domains are specified (breaking backward-compatibility).
 
+* The domain for int variables can no longer be specified as several individual elements, it has to be specified as either a single element, a range or another enumeration.
 * Fixed a bug with set cardinality, min and max constraints using composite sugar.
-* Domains for int variables can no longer be specified as several individual elements, it has to be specified as either a single element, a range or another enumeration.
 * Variables can now be created inside the optimization block.
 
 == Version 0.6.0
