--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,6 @@
 == Version 0.8.0
 This release makes the jump from using Gecode 1.3.1 to using Gecode 2.1.1 . 
-This jump incurs the following changes to the interface.
+The following changes have been made to the interface as a result of the jump.
 
 * The distinct constraint for sets has been removed.
 * Added the propagation kind option to the non-set constraints.
