--- a/CHANGES
+++ b/CHANGES
@@ -2,7 +2,7 @@
 This release makes the jump from using Gecode 1.3.1 to using Gecode 2.1.1 . 
 The following changes have been made to the interface as a result of the jump.
 
-* The distinct constraint for sets has been removed.
+* Removed the distinct constraint for sets.
 * Added the propagation kind option to the non-set constraints.
 
 == Version 0.7.1
