Added release info.

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 == Version 0.8.1
+This release adds tuple constraints along with a couple of minor features. It 
+also fixes a bug introduced in the previous version.
 
 * [#19435] Fixed a bug causing inconsistencies during BAB-search. The bug stopped the send+more=money example from working correctly.
 * Fixed the "raw_bindings" and "sudoku-set" examples, which were broken by the 0.8.0 release.
