Updated the version number and added release notes.

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
-== Next version
+== Version 0.9.0
+This release adds a generous amount of sugar designed to cut down on often 
+repeated code. It also adds the ability to freely combine constraints
+without needing temporary variables.
 
 * Variables that should be accessible from outside the model can now easily be created by calling "<variable_name>_is_a <variable>" where "<variable_name>" is the desired name of the variable and "<variable>" is the variable (e.g. "int_var(17)"). Take a look at the examples to see it in action.
 * Gecode.solve, Gecode.maximize and Gecode.minimize can now be used to solve a problem without first having to explicitly create a class for the model.
