--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,6 @@
 == Next version
 
-* Added Gecode::Mixin which can be mixed in rather than inheriting from Gecode::Model. Thanks to Adam Rose for the suggestion.
+* Added Gecode::Mixin which can be mixed in rather than inheriting from Gecode::Model. Mixing in Gecode::Mixin is now the preferred way to create models. Thanks to Adam Rose for the suggestion.
 * Upgraded the backend to Gecode 2.2.0. See http://www.gecode.org/gecode-doc-latest/PageChanges_2_2_0.html for a list of changes.
 
 == Version 0.9.0
