Added Hakan to the THANKS file.

--- a/THANKS
+++ b/THANKS
@@ -8,6 +8,7 @@ is today. It is sorted in alphabetical order by last name.
   Google Summer of Code 2007.
 * James Edward Gray II - Provided superb mentoring during Google Summer 
   of Code 2007, influencing many decisions made.
+* Hakan Kjellerstrand - Created many new example models.
 * Mikael Lagerkvist - Provided support from the Gecode side.
 * Andreas Launila - Created the interface on top of the raw bindings and 
   the website.
