--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,5 @@
-== Next
+== Version 1.1.1
+This release fixes a compilation error with newer versions of GCC.
 
 * Fixed a compilation error when installing gecoder-with-gecode using GCC 4.7+ .
 
